# DigitalCurling3-GUI

./: .gitignore  CMakeLists.txt  README.md  digitalcurling3_gui_ja_JP.ts
src/: coord.hpp  game_log.cpp  game_log.hpp  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  model.cpp  model.hpp  preference_dialog.cpp  preference_dialog.hpp  preference_dialog.ui  score_table_model.cpp  score_table_model.hpp  settings.cpp  settings.hpp  sheet.cpp  sheet.hpp  sheet_play_area_widget.cpp  sheet_play_area_widget.hpp  sheet_widget.cpp  sheet_widget.hpp  shot_log.cpp  shot_log.hpp  slider_widget.cpp  slider_widget.hpp  stone_item_delegate.cpp  stone_item_delegate.hpp  version.cpp.in  version.hpp
